--- a/my-promises/bower.json
+++ b/my-promises/bower.json
@@ -34,6 +34,7 @@
     "angular": "1.4.8"
   },
   "dependencies": {
-    "angular-lazy-img": "^1.2.2"
+    "angular-lazy-img": "^1.2.2",
+    "ngCordova": "^0.1.27-alpha"
   }
 }
